<resources>
    <string name="app_name">Cellar</string>

    <!-- Label Activity -->
    <string name="add_category">Aggiungi Categoria</string>
    <string name="management_category">Gestione Categoria</string>
    <string name="update_category">Modifica Categoria</string>
    <string name="add_product">Aggiungi Prodotto</string>
    <string name="management_product">Gestione Prodotto</string>
    <string name="update_product">Modifica Prodotto</string>
    <string name="send_inventories">Invia Rimanenze</string>
    <string name="graph">Statistiche</string>

    <!-- Navigation -->
    <string name="title_management">Gestione</string>
    <string name="title_sales">Vendite</string>
    <string name="title_purchased">Acquisti</string>
    <string name="title_orders">Ordini</string>

    <!-- Button -->
    <string name="button_submit">Salva</string>
    <string name="button_update">Modifica</string>
    <string name="button_delete">Cancella</string>
    <string name="button_duplicate">Duplica</string>
    <string name="button_send">Invia</string>

    <!-- Label Form -->
    <string name="product_hint">Nome Prodotto</string>
    <string name="company_hint">Nome Azienda</string>
    <string name="year_hint">Anno</string>
    <string name="minimum_hint">Min.</string>
    <string name="quantity_hint">Num.</string>
    <string name="pos_hint">Pos.</string>
    <string name="price_hint">Prezzo</string>

    <!-- Array -->
    <string-array name="denomination_array">
        <item>Nessuna</item>
        <item>I.G.T.</item>
        <item>I.G.P.</item>
        <item>D.O.C.</item>
        <item>D.O.P.</item>
        <item>D.O.C.G.</item>
    </string-array>
</resources>
